[project]
name = "resnet-vs-mlp"
version = "0.1.0"
description = "A comparative study of ResNet and MLP architectures."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
